--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
 		    -webkit-transition: background 0.25s;
 		    transition: background 0.25s;
 		}
+
+		.asterisk {
+			border-radius: 50%;
+		}
+		.asterisk img {
+			max-width: 15px;
+		}
+		.asterisk .fa {
+			text-align: center;
+			font-size: 12px;
+			margin: 0 auto !important; 
+		}
+
+
 		.note-and-overlay {
 			z-index:1000;
 			position:absolute;
@@ -92,15 +106,15 @@
 				<div class="col-lg-offset-2 col-lg-9 col-md-12 col-xs-12" style="height:1300px;">
 					<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Curabitur blandit tempus porttitor. Maecenas faucibus mollis interdum.</p>
 
-					<p>Nam sit amet maximus orci. Morbi quis leo venenatis, congue ex vitae, auctor mi. <em data-toggle="modal"  data-target="#myModal" data-direction="bottom" class="highlight highlight-one bada-bing">Pellentesque interdum dictum ante sed dapibus</em> cras sagittis mauris vitae libero ultricies, vel cursus elit egestas. Mauris accumsan, lorem sed consectetur lobortis, nibh quam congue libero, in rhoncus orci magna nec neque. Nam maximus urna vitae massa volutpat, sed ultrices turpis faucibus. Phasellus neque dolor, luctus vel metus eget, vestibulum pretium lacus. Nulla hendrerit massa a nulla mattis semper.</p>
+					<p>Nam sit amet maximus orci. Morbi quis leo venenatis, congue ex vitae, <em data-toggle="modal"  data-target="#myModal" data-direction="bottom" class="highlight highlight-1">auctor</em> mi. <em data-toggle="modal"  data-target="#myModal" data-direction="bottom" class="highlight highlight-2">Pellentesque interdum dictum ante sed dapibus</em> cras sagittis mauris vitae libero ultricies, vel cursus elit egestas. Mauris accumsan, lorem sed consectetur lobortis, nibh quam congue libero, in rhoncus orci magna nec neque. Nam maximus urna vitae massa volutpat, sed ultrices turpis faucibus. <em data-toggle="modal"  data-target="#myModal" data-direction="bottom" class="highlight highlight-3">Phasellus neque dolor</em>, luctus vel metus eget, vestibulum pretium lacus. Nulla hendrerit massa a nulla mattis semper.</p>
 
 					<p>Proin varius ligula id dolor auctor, ut ullamcorper augue tempus. Etiam sed mi nec dui aliquam viverra vitae et lectus. Donec varius dui mi, et semper risus iaculis et. Nulla facilisi. Duis posuere dui non mi auctor lacinia.</p>
 
-					<p>Nam sit amet maximus orci. Morbi quis leo venenatis, congue ex vitae, auctor mi. Pellentesque interdum dictum ante sed dapibus. Cras sagittis mauris vitae libero ultricies, vel cursus elit egestas.</p>
+					<p>Nam sit amet maximus orci. <em data-toggle="modal"  data-target="#myModal" data-direction="bottom" class="highlight highlight-4">Morbi quis leo venenatis</em>, congue ex vitae, auctor mi. Pellentesque interdum dictum ante sed dapibus. Cras sagittis mauris vitae libero ultricies, vel cursus elit egestas.</p>
 
 					<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Curabitur blandit tempus porttitor. Maecenas faucibus mollis interdum.</p>
 
-					<p>Nam sit amet maximus orci. Morbi quis leo venenatis, congue ex vitae, auctor mi. Pellentesque interdum dictum ante sed dapibus. Cras sagittis mauris vitae libero ultricies, vel cursus elit egestas. Mauris accumsan, lorem sed consectetur lobortis, nibh quam congue libero, in rhoncus orci magna nec neque. Nam maximus urna vitae massa volutpat, sed ultrices turpis faucibus. Phasellus neque dolor, luctus vel metus eget, vestibulum pretium lacus. Nulla hendrerit massa a nulla mattis semper.</p>
+					<p>Nam sit amet maximus orci. Morbi quis leo venenatis, congue ex vitae, auctor mi. Pellentesque interdum dictum ante sed dapibus. Cras sagittis mauris vitae libero ultricies, vel cursus elit egestas. Mauris accumsan, lorem sed consectetur lobortis, nibh quam congue libero, <em data-toggle="modal"  data-target="#myModal" data-direction="bottom" class="highlight highlight-5">in rhoncus orci magna nec neque.</em> Nam maximus urna vitae massa volutpat, sed ultrices turpis faucibus. Phasellus neque dolor, luctus vel metus eget, vestibulum pretium lacus. Nulla hendrerit massa a nulla mattis semper.</p>
 
 					<p>Proin varius ligula id dolor auctor, ut ullamcorper augue tempus. Etiam sed mi nec dui aliquam viverra vitae et lectus. Donec varius dui mi, et semper risus iaculis et. Nulla facilisi. Duis posuere dui non mi auctor lacinia.</p>
 
@@ -122,9 +136,16 @@
 
 					<p>Nam sit amet maximus orci. Morbi quis leo venenatis, congue ex vitae, auctor mi. Pellentesque interdum dictum ante sed dapibus. Cras saggittis mauris vitae libero ultricies, vel cursus elit egestas.</p>
 				</div>
-				<div class="col-lg-1 note-asterisk" style="max-width:20px;max-height:20px;background:#000;"></div>
+				<div class="col-lg-1 asterisk-space" style="height:1300px;">
+					<div class="asterisk asterisk-1"><img src="asterisk-v2.svg"/><div style="display:inline;font-size:10px;margin-top:10px!important;"> 2</div></div>
+					<!-- <div class="asterisk asterisk-2"><img src="asterisk-v2.svg"/></div> -->
+					<div class="asterisk asterisk-3"><img src="asterisk-v2.svg"/></div>
+					<div class="asterisk asterisk-4"><img src="asterisk-v2.svg"/></div>
+					<!-- <div class="asterisk asterisk-4" style="min-width:20px;min-height:20px;color:#FFF;background:#000;"><i class="fa fa-file-text-o" aria-hidden="true"></i></div> -->
+					<div class="asterisk asterisk-5"><img src="asterisk-v2.svg"/></div>
+				</div>
 			</div>
-			<div class="col-lg-4 col-md-12 col-xs-12" style="height:1300px;">
+			<div class="col-lg-4 col-md-12 col-xs-12 rr" style="height:1300px;">
 				<div class="col-lg-8">
 					<div style="height:400px;min-width:100%;border:1px solid #d5d5d5;border-bottom:2px solid #D5D5D5;border-radius:4px;margin-bottom:30px;"></div>
 					<div style="height:400px;min-width:100%;border:1px solid #d5d5d5;border-bottom:2px solid #D5D5D5;border-radius:4px;margin-bottom:30px;"></div>
@@ -134,12 +155,95 @@
 		</div>
 	</div>
 	<script type="text/javascript">
+		var h1_offset = $('.highlight-1').offset().top - $(window).scrollTop();
+		var h2_offset = $('.highlight-2').offset().top - $(window).scrollTop();
+		var h3_offset = $('.highlight-3').offset().top - $(window).scrollTop();
+		var h4_offset = $('.highlight-4').offset().top - $(window).scrollTop();
+		var h5_offset = $('.highlight-5').offset().top - $(window).scrollTop();
+        // var trigger_offset = $(this).offset().top - $(window).scrollTop();
+        // var trigger_top = trigger_offset - rr_offset;
+		$('.asterisk-1').css({
+			'top':h1_offset,
+			'position':'absolute'
+		});
+		$('.asterisk-2').css({
+			'top':h2_offset,
+			'position':'absolute'
+		});
+		$('.asterisk-3').css({
+			'top':h3_offset,
+			'position':'absolute'
+		});
+		$('.asterisk-4').css({
+			'top':h4_offset,
+			'position':'absolute'
+		});
+		$('.asterisk-5').css({
+			'top':h5_offset,
+			'position':'absolute'
+		});
 
-		$(document).ready(function(){
-			var pb_2_offset = $('.pb-2').offset().top - $(window).scrollTop();
-	        var trigger_offset = $(this).offset().top - $(window).scrollTop();
-	        var trigger_top = trigger_offset - pb_2_offset;
+		$('.highlight-1').mouseover(function(){
+			$('.asterisk-1').css({
+				'transform': 'scale(1.25)',
+				'transition': 'transform .25s'
+			})
+		}).mouseout(function(){
+			$('.asterisk-1').css({
+				'transform': 'scale(1)',
+				'transition': 'transform .25s'
+			})
 		})
+
+		$('.highlight-2').mouseover(function(){
+			$('.asterisk-2').css({
+				'transform': 'scale(1.25)',
+				'transition': 'transform .25s'
+			})
+		}).mouseout(function(){
+			$('.asterisk-2').css({
+				'transform': 'scale(1)',
+				'transition': 'transform .25s'
+			})
+		})
+
+		$('.highlight-3').mouseover(function(){
+			$('.asterisk-3').css({
+				'transform': 'scale(1.25)',
+				'transition': 'transform .25s'
+			})
+		}).mouseout(function(){
+			$('.asterisk-3').css({
+				'transform': 'scale(1)',
+				'transition': 'transform .25s'
+			})
+		})
+
+		$('.highlight-4').mouseover(function(){
+			$('.asterisk-4').css({
+				'transform': 'scale(1.25)',
+				'transition': 'transform .25s'
+			})
+		}).mouseout(function(){
+			$('.asterisk-4').css({
+				'transform': 'scale(1)',
+				'transition': 'transform .25s'
+			})
+		})
+
+		$('.highlight-5').mouseover(function(){
+			$('.asterisk-5').css({
+				'transform': 'scale(1.25)',
+				'transition': 'transform .25s'
+			})
+		}).mouseout(function(){
+			$('.asterisk-5').css({
+				'transform': 'scale(1)',
+				'transition': 'transform .25s'
+			})
+		})
+
+
 
 		// $('.bada-bing').click(function() {
 		//     $('.modal')
