--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<script src="https://use.fontawesome.com/d7f4e47923.js"></script>
+	<!-- <script src="https://use.fontawesome.com/d7f4e47923.js"></script> -->
 
 	<style type="text/css">
 		.column {
