nixing all col-md

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 					<p>Nam sit amet maximus orci. Morbi quis leo venenatis, congue ex vitae, auctor mi. Pellentesque interdum dictum ante sed dapibus. Cras saggittis mauris vitae libero ultricies, vel cursus elit egestas.</p>
 				</div>
-				<div class="col-lg-1 col-md-1 asterisk-space" style="height:1300px;">
+				<div class="col-lg-1 asterisk-space" style="height:1300px;">
 					<div class="asterisk asterisk-1"><img src="asterisk-v2.svg"/><div style="display:inline;font-size:10px;margin-top:10px!important;"> 2</div></div>
 					<!-- <div class="asterisk asterisk-2"><img src="asterisk-v2.svg"/></div> -->
 					<div class="asterisk asterisk-3"><img src="asterisk-v2.svg"/></div>
