nixing all col-xs

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
   </div>
 	<div class="column">
 		<div class="row">
-			<div class="col-lg-7 col-xs-12" style="height:1300px;border-right:1px solid #D5D5D5;">
-				<div class="col-lg-offset-2 col-lg-9 col-xs-12" style="height:1300px;">
+			<div class="col-lg-7" style="height:1300px;border-right:1px solid #D5D5D5;">
+				<div class="col-lg-offset-2 col-lg-9" style="height:1300px;">
 					<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Curabitur blandit tempus porttitor. Maecenas faucibus mollis interdum.</p>
 
 					<p>Nam sit amet maximus orci. Morbi quis leo venenatis, congue ex vitae, <em data-toggle="modal"  data-target="#myModal" data-direction="bottom" class="highlight highlight-1">auctor</em> mi. <em data-toggle="modal"  data-target="#myModal" data-direction="bottom" class="highlight highlight-2">Pellentesque interdum dictum ante sed dapibus</em> cras sagittis mauris vitae libero ultricies, vel cursus elit egestas. Mauris accumsan, lorem sed consectetur lobortis, nibh quam congue libero, in rhoncus orci magna nec neque. Nam maximus urna vitae massa volutpat, sed ultrices turpis faucibus. <em data-toggle="modal"  data-target="#myModal" data-direction="bottom" class="highlight highlight-3">Phasellus neque dolor</em>, luctus vel metus eget, vestibulum pretium lacus. Nulla hendrerit massa a nulla mattis semper.</p>
@@ -145,7 +145,7 @@
 					<div class="asterisk asterisk-5"><img src="asterisk-v2.svg"/></div>
 				</div>
 			</div>
-			<div class="col-lg-4 col-xs-12 rr" style="height:1300px;">
+			<div class="col-lg-4 rr" style="height:1300px;">
 				<div class="col-lg-8">
 					<div style="height:400px;min-width:100%;border:1px solid #d5d5d5;border-bottom:2px solid #D5D5D5;border-radius:4px;margin-bottom:30px;"></div>
 					<div style="height:400px;min-width:100%;border:1px solid #d5d5d5;border-bottom:2px solid #D5D5D5;border-radius:4px;margin-bottom:30px;"></div>
