--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
 					<p>Nam sit amet maximus orci. Morbi quis leo venenatis, congue ex vitae, auctor mi. Pellentesque interdum dictum ante sed dapibus. Cras saggittis mauris vitae libero ultricies, vel cursus elit egestas.</p>
 				</div>
 				<div class="col-md-1 asterisk-space" style="height:1300px;">
-					<div class="asterisk asterisk-1"><img src="asterisk-v2.svg"/><div style="display:inline;font-size:10px;margin-top:10px!important;"> 2</div></div>
+					<div class="asterisk asterisk-1"><img src="assets/map-v1.svg"/></div>
 					<!-- <div class="asterisk asterisk-2"><img src="asterisk-v2.svg"/></div> -->
-					<div class="asterisk asterisk-3"><img src="asterisk-v2.svg"/></div>
-					<div class="asterisk asterisk-4"><img src="asterisk-v2.svg"/></div>
+					<div class="asterisk asterisk-3"><img src="assets/map-v2.svg"/></div>
+					<div class="asterisk asterisk-4"><img src="assets/map-v4.svg"/></div>
 					<!-- <div class="asterisk asterisk-4" style="min-width:20px;min-height:20px;color:#FFF;background:#000;"><i class="fa fa-file-text-o" aria-hidden="true"></i></div> -->
-					<div class="asterisk asterisk-5"><img src="asterisk-v2.svg"/></div>
+					<div class="asterisk asterisk-5"><img src="assets/map-v3.svg"/></div>
 				</div>
 			</div>
 			<div class="col-md-4 rr" style="height:1300px;">
